# kalshi/perps/klear/models/__init__.py
@@ -4,6 +4,7 @@ from __future__ import annotations
 
 from kalshi.perps.klear.models.common import Error
 from kalshi.perps.klear.models.margin import (
+    AssetClassFundingEstimate,
     AssetClassLiteral,
     AssetClassSettlementEstimate,
     ClearingTypeLiteral,
@@ -14,11 +15,15 @@ from kalshi.perps.klear.models.margin import (
     EstimatePortfolioMaintenanceMarginPosition,
     EstimatePortfolioMaintenanceMarginRequest,
     EstimatePortfolioMaintenanceMarginResponse,
+    FundingEstimate,
     FundingPaymentDetail,
     GenerateMarginFcmApiKeyRequest,
     GenerateMarginFcmApiKeyResponse,
     GetActiveMarginObligationsResponse,
+    GetFundingEstimateByAssetClassResponse,
     GetGuarantyFundBalanceResponse,
+    GetMaintenanceMarginMetadataResponse,
+    GetMarginFundingScheduleResponse,
     GetMarginReportsResponse,
     GetMarginSubtraderGroupsResponse,
     GetMemberFundingPaymentsResponse,
@@ -33,10 +38,14 @@ from kalshi.perps.klear.models.margin import (
     GetSettlementPricesResponse,
     ListMarginFcmApiKeysResponse,
     MaintenanceMarginDetail,
+    MaintenanceMarginLiquidationConfig,
+    MaintenanceMarginMatrices,
+    MaintenanceMarginMatrix,
     MarginFcmApiKey,
     MarginReport,
     MarginReportTypeLiteral,
     MarginSubtraderGroup,
+    MarketFundingEstimate,
     MarketSettlementEstimate,
     MemberFundingPayment,
     ObligationEntry,
@@ -51,6 +60,7 @@ from kalshi.perps.klear.models.margin import (
 )
 
 __all__ = [
+    "AssetClassFundingEstimate",
     "AssetClassLiteral",
     "AssetClassSettlementEstimate",
     "ClearingTypeLiteral",
@@ -62,11 +72,15 @@ __all__ = [
     "EstimatePortfolioMaintenanceMarginPosition",
     "EstimatePortfolioMaintenanceMarginRequest",
     "EstimatePortfolioMaintenanceMarginResponse",
+    "FundingEstimate",
     "FundingPaymentDetail",
     "GenerateMarginFcmApiKeyRequest",
     "GenerateMarginFcmApiKeyResponse",
     "GetActiveMarginObligationsResponse",
+    "GetFundingEstimateByAssetClassResponse",
     "GetGuarantyFundBalanceResponse",
+    "GetMaintenanceMarginMetadataResponse",
+    "GetMarginFundingScheduleResponse",
     "GetMarginReportsResponse",
     "GetMarginSubtraderGroupsResponse",
     "GetMemberFundingPaymentsResponse",
@@ -81,10 +95,14 @@ __all__ = [
     "GetSettlementPricesResponse",
     "ListMarginFcmApiKeysResponse",
     "MaintenanceMarginDetail",
+    "MaintenanceMarginLiquidationConfig",
+    "MaintenanceMarginMatrices",
+    "MaintenanceMarginMatrix",
     "MarginFcmApiKey",
     "MarginReport",
     "MarginReportTypeLiteral",
     "MarginSubtraderGroup",
+    "MarketFundingEstimate",
     "MarketSettlementEstimate",
     "MemberFundingPayment",
     "ObligationEntry",
